# QXQ_transpiler_benchmarking

./: BV_120_Results.ipynb  Bernstein_Script  FakeMultiChip.py  Optimizing_transpilation.ipynb  QXQ_benchmarking_tool.py  QXQ_transpiler_benchmarking.code-workspace  README.md  algolvl.ipynb  alogrithms.ipynb  benchmarking_notebook.ipynb  circuit_fidelity  file_sorting_test.py  num_of_entangled_gate.py  num_of_entangled_gates  num_of_gates  num_of_gates_circuit  optimzation_level_1.csv  optimzation_level_2.csv  optimzation_level_3.csv  qualitative_analysis.py  qualitative_analysis_V1  random_ciruits.py  runtime_circuit.py  runtime_optimization.ipynb  runtime_test.ipynb  setup.cfg  setup.py  test.ipynb  test_circuits_opt_1.csv
DJ_Algorithms/: dj_indep_qiskit_106.qasm  dj_indep_qiskit_109.qasm
Drafting/: qualitative_analysis.py
MQT_Circuits/: dj_indep_qiskit_101.qasm  dj_indep_qiskit_102.qasm  dj_indep_qiskit_104.qasm  dj_indep_qiskit_110.qasm  dj_indep_qiskit_112.qasm  dj_indep_qiskit_113.qasm  dj_indep_qiskit_116.qasm  dj_indep_qiskit_118.qasm  dj_indep_qiskit_121.qasm  dj_indep_qiskit_122.qasm  dj_indep_qiskit_124.qasm  dj_indep_qiskit_126.qasm  dj_indep_qiskit_127.qasm  dj_indep_qiskit_128.qasm  dj_indep_qiskit_129.qasm  dj_indep_qiskit_130.qasm  qft_indep_qiskit_102.qasm  qft_indep_qiskit_104.qasm  qft_indep_qiskit_105.qasm  qft_indep_qiskit_106.qasm  qft_indep_qiskit_110.qasm  qft_indep_qiskit_111.qasm  qft_indep_qiskit_112.qasm  qft_indep_qiskit_113.qasm  qft_indep_qiskit_116.qasm  qft_indep_qiskit_118.qasm  qft_indep_qiskit_119.qasm  qft_indep_qiskit_120.qasm  (+69 more)
(+128 files in other folders)
