[metadata]
name = your_project_name
version = 0.1
description = Your project description
author = Your Name
author_email = your@email.com
url = https://github.com/yourusername/your_project_repo
license = MIT

[options]
python_requires = >=3.6
packages = find:
install_requires =
    qiskit
    numpy
    matplotlib

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest
    pylint
    flake8

[options.entry_points]
console_scripts =
    your_script_name = your_package.module:main_function
