[metadata]
name = QXQ_transpiler_benchmarking
version = 0.1
description = Transpilation Tool for Qiskit 
author = Noel Negron, Guadalupe Cantera, Catherine Lozano, Victor Osunij
author_email = Catherinelibra17@gmail.com, Guadalupe_cantera@brown.edu, nmn2127@columbia.edu, victorosunij@gmail.com
url = https://github.com/BxNoel/QXQ_transpiler_benchmarking
license = MIT

[options]
python_requires = >=3.6
packages = find:
install_requires =
    qiskit
    numpy
    matplotlib
    
[options.extras_require]
dev =
    pytest
    pylint
    flake8
